--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <title>Static Comp Challenge</title>
 </head>
-<body>
+<body class="full-page">
   <div class="header">
     <p>Shares</p>
     <p>Playlists</p>
@@ -16,7 +21,19 @@
       <p>2Win!</p>
     </div>
   </div>
-  <div class="each-box">
+  <div class="all-boxes">
+   <div class="each-box">
+     <p>Shares</p>
+     <p>Views</p>
+     <p>02</p>
+     <p>Recipient's Name here</p>
+     <p>http://2winstage.com/p/recipients_name_here</p>
+     <p>Playlist</p>
+     <p>Name of Playlist</p>
+     <p>Attachments</p>
+     <p>04</p>
+   </div>
+   <div class="each-box">
     <p>Shares</p>
     <p>Views</p>
     <p>02</p>
@@ -93,16 +110,6 @@
     <p>Attachments</p>
     <p>04</p>
   </div>
-  <div class="each-box">
-    <p>Shares</p>
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
+ </div>
 </body>
 </html>
