Align the header symbols

--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 </head>
 <body class="full-page">
   <div class="header">
-    <p>Shares</p>
-    <p>Playlists</p>
-    <p>Personal Videos</p>
+    <div class="share-container">
+      <img class ="share-icon" src="./assets/share.svg">
+      <p class="share-icon">Shares</p>
+    </div>
+    <div class="menu-playlists-container">
+      <img class="menu-icon" src="./assets/menu.svg">
+      <p>Playlists</p>
+    </div>
+    <div class="personal-videos">
+      <img class="person-videos" src="./assets/person-symbol.svg">
+      <p class="personal-videos">Personal Videos</p>
+    </div>
     <div class="inside-header">
       <p>Admin Username</p>
       <p>2Win!</p>
