Realign some of the header symbols

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
       <img class ="share-icon" src="./assets/share.svg">
       <p class="share-icon">Shares</p>
     </div>
-    <div class="menu-playlists-container">
-      <img class="menu-icon" src="./assets/menu.svg">
-      <p>Playlists</p>
+    <div class="playlist-icon-container">
+      <img class="playlist-icon" src="./assets/menu.svg">
+      <p class="playlist-icon">Playlists</p>
     </div>
-    <div class="personal-videos">
-      <img class="person-videos" src="./assets/person-symbol.svg">
+    <div class="personal-videos-container">
+      <img class="personal-videos" src="./assets/person-symbol.svg">
       <p class="personal-videos">Personal Videos</p>
     </div>
-    <div class="inside-header">
+    <div class="admin-username-2-win">
+      <img class="admin-username" src="./assets/account-circle.svg">
       <p>Admin Username</p>
       <p>2Win!</p>
     </div>
