Respace html elements

--- a/index.html
+++ b/index.html
@@ -13,80 +13,82 @@
 </head>
 <body class="full-page">
   <div class="header">
-    <div class="share-container">
-      <img class ="share-icon" src="./assets/share.svg">
-      <p class="share-icon">Shares</p>
+    <div class="left-header-container">
+      <div class="share-container">
+        <img class ="share-icon" src="./assets/share.svg">
+        <p class="share-icon">Shares</p>
+      </div>
+      <div class="playlist-icon-container">
+        <img class="playlist-icon" src="./assets/menu.svg">
+        <p class="playlist-icon">Playlists</p>
+      </div>
+      <div class="personal-videos-container">
+        <img class="personal-videos" src="./assets/person-symbol.svg">
+        <p class="personal-videos">Personal Videos</p>
+      </div>
     </div>
-    <div class="playlist-icon-container">
-      <img class="playlist-icon" src="./assets/menu.svg">
-      <p class="playlist-icon">Playlists</p>
+      <div class="admin-username-2-win">
+        <img class="admin-username" src="./assets/account-circle.svg">
+        <p>Admin Username</p>
+        <p>2Win!</p>
+      </div>
     </div>
-    <div class="personal-videos-container">
-      <img class="personal-videos" src="./assets/person-symbol.svg">
-      <p class="personal-videos">Personal Videos</p>
+    <div class="all-boxes">
+     <div class="each-box">
+       <p>Shares</p>
+       <p>Views</p>
+       <p>02</p>
+       <p>Recipient's Name here</p>
+       <p>http://2winstage.com/p/recipients_name_here</p>
+       <p>Playlist</p>
+       <p>Name of Playlist</p>
+       <p>Attachments</p>
+       <p>04</p>
+     </div>
+     <div class="each-box">
+       <p>Shares</p>
+       <p>Views</p>
+       <p>02</p>
+       <p>Recipient's Name here</p>
+       <p>http://2winstage.com/p/recipients_name_here</p>
+       <p>Playlist</p>
+       <p>Name of Playlist</p>
+       <p>Attachments</p>
+       <p>04</p>
+     </div>
+     <div class="each-box">
+       <p>Shares</p>
+       <p>Views</p>
+       <p>02</p>
+       <p>Recipient's Name here</p>
+       <p>http://2winstage.com/p/recipients_name_here</p>
+       <p>Playlist</p>
+       <p>Name of Playlist</p>
+       <p>Attachments</p>
+       <p>04</p>
     </div>
-    <div class="admin-username-2-win">
-      <img class="admin-username" src="./assets/account-circle.svg">
-      <p>Admin Username</p>
-      <p>2Win!</p>
+    <div class="each-box">
+      <p>Shares</p>
+      <p>Views</p>
+      <p>02</p>
+      <p>Recipient's Name here</p>
+      <p>http://2winstage.com/p/recipients_name_here</p>
+      <p>Playlist</p>
+      <p>Name of Playlist</p>
+      <p>Attachments</p>
+      <p>04</p>
     </div>
-  </div>
-  <div class="all-boxes">
-   <div class="each-box">
-     <p>Shares</p>
-     <p>Views</p>
-     <p>02</p>
-     <p>Recipient's Name here</p>
-     <p>http://2winstage.com/p/recipients_name_here</p>
-     <p>Playlist</p>
-     <p>Name of Playlist</p>
-     <p>Attachments</p>
-     <p>04</p>
-   </div>
-   <div class="each-box">
-    <p>Shares</p>
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
-  <div class="each-box">
-    <p>Shares</p>
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
-  <div class="each-box">
-    <p>Shares</p>
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
-  <div class="each-box">
-    <p>Shares</p>
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
+    <div class="each-box">
+      <p>Shares</p>
+      <p>Views</p>
+      <p>02</p>
+      <p>Recipient's Name here</p>
+      <p>http://2winstage.com/p/recipients_name_here</p>
+      <p>Playlist</p>
+      <p>Name of Playlist</p>
+      <p>Attachments</p>
+      <p>04</p>
+    </div>
   <div class="each-box">
     <p>Shares</p>
     <p>Views</p>
