Add globe next to 2Win

--- a/index.html
+++ b/index.html
@@ -16,21 +16,27 @@
     <div class="left-header-container">
       <div class="share-container">
         <img class ="share-icon" src="./assets/share.svg">
-        <p class="share-icon">Shares</p>
+        <p class="share-icon">SHARES</p>
       </div>
       <div class="playlist-icon-container">
         <img class="playlist-icon" src="./assets/menu.svg">
-        <p class="playlist-icon">Playlists</p>
+        <p class="playlist-icon">PLAYLIST</p>
       </div>
       <div class="personal-videos-container">
         <img class="personal-videos" src="./assets/person-symbol.svg">
-        <p class="personal-videos">Personal Videos</p>
+        <p class="personal-videos">PERSONAL VIDEOS</p>
       </div>
     </div>
-      <div class="admin-username-2-win">
-        <img class="admin-username" src="./assets/account-circle.svg">
-        <p>Admin Username</p>
-        <p>2Win!</p>
+      <div class="admin-username-2-win-container">
+        <div class="admin-username-container">
+          <img class="admin-username" src="./assets/account-circle.svg">
+          <p admin="admin-username">Admin Username</p>
+          <img class="admin-username" src="./assets/arrow.svg">
+        </div>
+        <div class="win-container">
+          <p class="win">2Win!</p>
+          <img class="win globe" src="./assets/globe.svg">
+        </div>
       </div>
     </div>
     <div class="all-boxes">
