--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,700;1,700&family=Eczar&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <title>Static Comp Challenge</title>
 </head>
 <body class="full-page">
@@ -34,7 +32,7 @@
           <img class="admin-username" src="./assets/arrow.svg">
         </div>
         <div class="win-container">
-          <p class="win">2Win!</p>
+          <p class="win win-words">2Win!</p>
           <img class="win globe" src="./assets/globe.svg">
         </div>
       </div>
