Resposition the icons to align

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="win-container">
           <p class="win win-words">2Win!</p>
-          <img class="win globe" src="./assets/globe.svg">
+          <img class="win win-words globe" src="./assets/globe.svg">
         </div>
       </div>
     </div>
