Style the Shares title

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
       </div>
     </div>
+    <section class="shares-title-container">
+      <h1>SHARES</h1>
+    </section>
     <div class="all-boxes">
      <div class="each-box">
        <p>Shares</p>
