--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
     <div class="all-boxes">
      <div class="each-box">
-       <p>Shares</p>
+       <img class="share-solid-arrow" src="./assets/share-solid.svg">
        <p>Views</p>
        <p>02</p>
        <p>Recipient's Name here</p>
@@ -53,7 +53,7 @@
        <p>04</p>
      </div>
      <div class="each-box">
-       <p>Shares</p>
+       <img class="share-solid-arrow" src="./assets/share-solid.svg">
        <p>Views</p>
        <p>02</p>
        <p>Recipient's Name here</p>
@@ -64,7 +64,7 @@
        <p>04</p>
      </div>
      <div class="each-box">
-       <p>Shares</p>
+       <img class="share-solid-arrow" src="./assets/share-solid.svg">
        <p>Views</p>
        <p>02</p>
        <p>Recipient's Name here</p>
@@ -75,7 +75,7 @@
        <p>04</p>
     </div>
     <div class="each-box">
-      <p>Shares</p>
+      <img class="share-solid-arrow" src="./assets/share-solid.svg">
       <p>Views</p>
       <p>02</p>
       <p>Recipient's Name here</p>
@@ -86,7 +86,7 @@
       <p>04</p>
     </div>
     <div class="each-box">
-      <p>Shares</p>
+      <img class="share-solid-arrow" src="./assets/share-solid.svg">
       <p>Views</p>
       <p>02</p>
       <p>Recipient's Name here</p>
@@ -97,7 +97,7 @@
       <p>04</p>
     </div>
   <div class="each-box">
-    <p>Shares</p>
+    <img class="share-solid-arrow" src="./assets/share-solid.svg">
     <p>Views</p>
     <p>02</p>
     <p>Recipient's Name here</p>
@@ -108,7 +108,7 @@
     <p>04</p>
   </div>
   <div class="each-box">
-    <p>Shares</p>
+    <img class="share-solid-arrow" src="./assets/share-solid.svg">
     <p>Views</p>
     <p>02</p>
     <p>Recipient's Name here</p>
@@ -119,7 +119,7 @@
     <p>04</p>
   </div>
   <div class="each-box">
-    <p>Shares</p>
+    <img class="share-solid-arrow" src="./assets/share-solid.svg">
     <p>Views</p>
     <p>02</p>
     <p>Recipient's Name here</p>
