Align arrow and views and number

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
     </section>
     <div class="all-boxes">
      <div class="each-box">
-       <img class="share-solid-arrow" src="./assets/share-solid.svg">
-       <p>Views</p>
-       <p>02</p>
+       <div class="views-and-arrow-container">
+         <img class="share-solid-arrow" src="./assets/share-solid.svg">
+         <div class="views-container">
+           <p class="views">VIEWS</p>
+           <p class=" views views-number">02</p>
+        </div>
+       </div>
        <p>Recipient's Name here</p>
        <p>http://2winstage.com/p/recipients_name_here</p>
        <p>Playlist</p>
