Delete excess code

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
        </div>
        <p>Recipient's Name here</p>
+       <p>Friday 9/08/23 7:73pm</p>
        <p>http://2winstage.com/p/recipients_name_here</p>
        <p>Playlist</p>
        <p>Name of Playlist</p>
