Add containers to the box text in html

--- a/index.html
+++ b/index.html
@@ -43,21 +43,30 @@
     <div class="all-boxes">
      <div class="each-box">
        <div class="views-and-arrow-container">
-      
          <img class="share-solid-arrow" src="./assets/share-solid.svg">
          <div class="views-container">
            <p class="views">VIEWS</p>
            <p class=" views views-number">02</p>
         </div>
        </div>
-       <p>Recipient's Name here</p>
-       <p>Friday 9/08/23 7:73pm</p>
-       <p>http://2winstage.com/p/recipients_name_here</p>
-       <p>Playlist</p>
-       <p>Name of Playlist</p>
-       <p>Attachments</p>
-       <p>04</p>
+       <div class="text-container">
+       <div class="recipient-and-date">
+         <p>Recipient's Name here</p>
+         <p>Friday 9/08/23 7:73pm</p>
+       </div>
+         <p>http://2winstage.com/p/recipients_name_here</p>
+         <div class="playlist-and-name">
+           <p>Playlist</p>
+           <p>Name of Playlist</p>
+         </div>
+         <div class="attachments-and-number">
+          <p>Attachments</p>
+          <p>04</p>
+         </div>
+      </div>
      </div>
+
+
      <div class="each-box">
        <img class="share-solid-arrow" src="./assets/share-solid.svg">
        <p>Views</p>
