--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       <h1>SHARES</h1>
     </section>
     <div class="all-boxes">
-     <div class="each-box">
+     
+      <div class="each-box">
        <div class="views-and-arrow-container">
          <img class="share-solid-arrow" src="./assets/share-solid.svg">
          <div class="views-container">
@@ -62,88 +63,210 @@
          <div class="attachments-and-number">
           <p>Attachments</p>
           <p>04</p>
-         </div>
+        </div>
+        </div>
       </div>
-     </div>
 
+      <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
 
-     <div class="each-box">
-       <img class="share-solid-arrow" src="./assets/share-solid.svg">
-       <p>Views</p>
-       <p>02</p>
-       <p>Recipient's Name here</p>
-       <p>http://2winstage.com/p/recipients_name_here</p>
-       <p>Playlist</p>
-       <p>Name of Playlist</p>
-       <p>Attachments</p>
-       <p>04</p>
-     </div>
-     <div class="each-box">
-       <img class="share-solid-arrow" src="./assets/share-solid.svg">
-       <p>Views</p>
-       <p>02</p>
-       <p>Recipient's Name here</p>
-       <p>http://2winstage.com/p/recipients_name_here</p>
-       <p>Playlist</p>
-       <p>Name of Playlist</p>
-       <p>Attachments</p>
-       <p>04</p>
-    </div>
-    <div class="each-box">
-      <img class="share-solid-arrow" src="./assets/share-solid.svg">
-      <p>Views</p>
-      <p>02</p>
-      <p>Recipient's Name here</p>
-      <p>http://2winstage.com/p/recipients_name_here</p>
-      <p>Playlist</p>
-      <p>Name of Playlist</p>
-      <p>Attachments</p>
-      <p>04</p>
-    </div>
-    <div class="each-box">
-      <img class="share-solid-arrow" src="./assets/share-solid.svg">
-      <p>Views</p>
-      <p>02</p>
-      <p>Recipient's Name here</p>
-      <p>http://2winstage.com/p/recipients_name_here</p>
-      <p>Playlist</p>
-      <p>Name of Playlist</p>
-      <p>Attachments</p>
-      <p>04</p>
-    </div>
-  <div class="each-box">
-    <img class="share-solid-arrow" src="./assets/share-solid.svg">
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
-  <div class="each-box">
-    <img class="share-solid-arrow" src="./assets/share-solid.svg">
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
-  <div class="each-box">
-    <img class="share-solid-arrow" src="./assets/share-solid.svg">
-    <p>Views</p>
-    <p>02</p>
-    <p>Recipient's Name here</p>
-    <p>http://2winstage.com/p/recipients_name_here</p>
-    <p>Playlist</p>
-    <p>Name of Playlist</p>
-    <p>Attachments</p>
-    <p>04</p>
-  </div>
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+
+       <div class="each-box">
+        <div class="views-and-arrow-container">
+          <img class="share-solid-arrow" src="./assets/share-solid.svg">
+          <div class="views-container">
+            <p class="views">VIEWS</p>
+            <p class=" views views-number">02</p>
+         </div>
+        </div>
+        <div class="text-container">
+        <div class="recipient-and-date">
+          <p>Recipient's Name here</p>
+          <p>Friday 9/08/23 7:73pm</p>
+        </div>
+          <p>http://2winstage.com/p/recipients_name_here</p>
+          <div class="playlist-and-name">
+            <p>Playlist</p>
+            <p>Name of Playlist</p>
+          </div>
+          <div class="attachments-and-number">
+           <p>Attachments</p>
+           <p>04</p>
+         </div>
+         </div>
+       </div>
+     
  </div>
 </body>
 </html>
