Add different photos to the correct box

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-man">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
@@ -93,7 +93,7 @@
        </div>
 
        <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-older-woman">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
@@ -118,7 +118,7 @@
        </div>
 
        <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-man-1">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
@@ -143,7 +143,7 @@
        </div>
 
        <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-woman-1">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
@@ -168,7 +168,7 @@
        </div>
 
        <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-man-2">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
@@ -193,7 +193,7 @@
        </div>
 
        <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-woman-3">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
@@ -218,7 +218,7 @@
        </div>
 
        <div class="each-box">
-        <div class="views-and-arrow-container">
+        <div class="views-and-arrow-container professional-man-3">
           <img class="share-solid-arrow" src="./assets/share-solid.svg">
           <div class="views-container">
             <p class="views">VIEWS</p>
