Aligned recipient name and date on all cards

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
        </div>
        <div class="text-container">
        <div class="recipient-and-date">
-         <p>Recipient's Name here</p>
-         <p>Friday 9/08/23 7:73pm</p>
+         <p class="recipient">Recipient's Name here</p>
+         <p class="date">Friday 9/08/23 7:73pm</p>
        </div>
          <p>http://2winstage.com/p/recipients_name_here</p>
          <div class="playlist-and-name">
@@ -77,8 +77,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
@@ -102,8 +102,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
@@ -127,8 +127,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
@@ -152,8 +152,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
@@ -177,8 +177,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
@@ -202,8 +202,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
@@ -227,8 +227,8 @@
         </div>
         <div class="text-container">
         <div class="recipient-and-date">
-          <p>Recipient's Name here</p>
-          <p>Friday 9/08/23 7:73pm</p>
+          <p class="recipient">Recipient's Name here</p>
+          <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
           <p>http://2winstage.com/p/recipients_name_here</p>
           <div class="playlist-and-name">
