--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
          <p class="recipient">Recipient's Name here</p>
          <p class="date">Friday 9/08/23 7:73pm</p>
        </div>
-         <p>http://2winstage.com/p/recipients_name_here</p>
+       <div class="site-link-container">
+        <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+      </div>
          <div class="playlist-and-name">
            <p>Playlist</p>
            <p>Name of Playlist</p>
@@ -80,7 +82,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
@@ -105,7 +109,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
@@ -130,7 +136,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
@@ -155,7 +163,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
@@ -180,7 +190,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
@@ -205,7 +217,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
@@ -230,7 +244,9 @@
           <p class="recipient">Recipient's Name here</p>
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
-          <p>http://2winstage.com/p/recipients_name_here</p>
+        <div class="site-link-container">
+          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+        </div>
           <div class="playlist-and-name">
             <p>Playlist</p>
             <p>Name of Playlist</p>
