Capitalize playlist on all the cards

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
       </div>
          <div class="playlist-and-name">
-           <p>Playlist</p>
+           <p>PLAYLIST</p>
            <p>Name of Playlist</p>
          </div>
          <div class="attachments-and-number">
@@ -86,7 +86,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
@@ -113,7 +113,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
@@ -140,7 +140,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
@@ -167,7 +167,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
@@ -194,7 +194,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
@@ -221,7 +221,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
@@ -248,7 +248,7 @@
           <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
         </div>
           <div class="playlist-and-name">
-            <p>Playlist</p>
+            <p>PLAYLIST</p>
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
