--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
        <div class="site-link-container">
         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
       </div>
-         <div class="playlist-and-name">
-           <p>PLAYLIST</p>
-           <p>Name of Playlist</p>
-         </div>
+           <p class="playlist-title">PLAYLIST</p>
+           <p class="name-of-playlist">Name of Playlist</p>
          <div class="attachments-and-number">
-          <p>Attachments</p>
-          <p>04</p>
+           <p class="attachments">ATTACHMENTS</p>
+           <p class="attachments-number">04</p>
         </div>
         </div>
       </div>
@@ -90,7 +88,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
@@ -117,7 +115,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
@@ -144,7 +142,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
@@ -171,7 +169,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
@@ -198,7 +196,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
@@ -225,7 +223,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
@@ -252,7 +250,7 @@
             <p>Name of Playlist</p>
           </div>
           <div class="attachments-and-number">
-           <p>Attachments</p>
+           <p>ATTACHMENTS</p>
            <p>04</p>
          </div>
          </div>
