Complete basic styling

--- a/index.html
+++ b/index.html
@@ -81,15 +81,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
@@ -108,15 +106,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
@@ -135,15 +131,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
@@ -162,15 +156,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
@@ -189,15 +181,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
@@ -216,15 +206,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
@@ -243,15 +231,13 @@
           <p class="date">Friday 9/08/23 7:73pm</p>
         </div>
         <div class="site-link-container">
-          <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
-        </div>
-          <div class="playlist-and-name">
-            <p>PLAYLIST</p>
-            <p>Name of Playlist</p>
-          </div>
+         <p class="site-link">http://2winstage.com/p/recipients_name</br>_here</p>
+       </div>
+            <p class="playlist-title">PLAYLIST</p>
+            <p class="name-of-playlist">Name of Playlist</p>
           <div class="attachments-and-number">
-           <p>ATTACHMENTS</p>
-           <p>04</p>
+            <p class="attachments">ATTACHMENTS</p>
+            <p class="attachments-number">04</p>
          </div>
          </div>
        </div>
